--- a/2014-03-21/index.html
+++ b/2014-03-21/index.html
@@ -11,14 +11,14 @@
 
 Ho cercato di ricreare le principali componenti del Castel del Monte, tra cui le pareti delle corpo centrale e delle torri perimetrali e lo scheletro delle stranze interne al castello. 
 
-<h2>link alle immagini di riferimento <h2>
-<img src="images/fig01.png”>fig01.png</img> <br>
-<img src="images/fig02.png”>fig02.png</img> <br>
-<img src="images/fig03.png”>fig03.png</img><br>
-<img src="images/fig04.png”>fig04.png</img><br>
-<img src="images/fig05.png”>fig05.png</img><br>
-<img src="images/fig01.png”>fig06.png</img><br>
-<img src="images/fig01.png”>fig07.png</img><br>
+<h2>link alle immagini di riferimento </h2>
+<img src="images/fig01.png" width="200" height="200">fig01.png</img> <br>
+<img src="images/fig02.png" width="200" height="200">fig02.png</img> <br>
+<img src="images/fig03.png" width="200" height="200">fig03.png</img><br>
+<img src="images/fig04.png" width="200" height="200">fig04.png</img><br>
+<img src="images/fig05.png" width="200" height="200">fig05.png</img><br>
+<img src="images/fig06.png" width="200" height="200">fig06.png</img><br>
+<img src="images/fig07.png" width="200" height="200">fig07.png</img><br>
 
 
 <h2>link agli esercizi dell'homework: <h2>
