modifiche esercizio 1 e esercizio2

--- a/2014-05-16/index.html
+++ b/2014-05-16/index.html
@@ -10,11 +10,16 @@ Nel secondo esercizio ho ricreato la struttura della palazzina suddivisa in pian
 
 
 <h2>Link alle immagini di riferimento:</h2>
-<img src="images/fig01.png" width="200" height="200"> fig01.png </img> <br>
-<img src="images/fig02.png" width="200" height="200"> fig02.png </img> <br>
-<img src="images/fig03.png" width="200" height="200"> fig03.png </img> <br>
-<img src="images/fig04.png" width="200" height="200"> fig04.png </img> <br>
-<img src="images/fig05.png" width="200" height="200"> fig05.png </img> <br>
+<img src="images/fig01.png" width="400" height="400"> </img> 
+<img src="images/fig02.png" width="400" height="400">  </img> <br>
+<img src="images/fig03.png" width="400" height="400">  </img> 
+<img src="images/fig04.png" width="400" height="400">  </img> <br>
+<img src="images/fig05.png" width="400" height="400">  </img> 
+<img src="images/fig06.png" width="400" height="400">  </img> <br>
+<img src="images/fig07.png" width="400" height="400">  </img> 
+<img src="images/fig08.png" width="400" height="400">  </img> <br>
+<img src="images/fig09.png" width="400" height="400">  </img> <br>
+
 
 
 
@@ -22,3 +27,4 @@ Nel secondo esercizio ho ricreato la struttura della palazzina suddivisa in pian
 	<a href="python/exercise1.py"> exercise1.py </a><br>
 	<a href="python/exercise2.py"> exercise2.py </a><br>
 	<a href="python/exercise3.py"> exercise3.py </a><br>
+	<a href="python/exercise4.py"> exercise4.py </a><br>
