--- a/2014-06-05/lamp.html
+++ b/2014-06-05/lamp.html
@@ -24,7 +24,7 @@
     <!-- Javascript code that runs our Three.js examples --> 
     <script>
 
-        //document.write('<embed src="Pixar_Intro.mp4" ></embed>');
+        //document.write('<embed src="Pixar_Intro_HD_1080p.mp4" ></embed>');
       // once everything is loaded, we run our Three.js stuff.
       $(function () {
 
@@ -487,7 +487,6 @@
             stats.update();
             TWEEN.update();
             KF.update();
-
             if (controls.trackball) {
                 trackballControls.update();
             }           
